--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,17 @@
   font-family: var(--font-family-2);
   text-decoration: none;
 }
+html {
+  scroll-behavior: smooth;
+}
+html::-webkit-scrollbar {
+  width: 15px;
+  border-radius: 4px;
+}
+html::-webkit-scrollbar-thumb {
+  background-color: var(--main-color);
+}
+
 /* Variables */
 :root {
   --main-color: #54372a;
@@ -275,6 +286,174 @@ header {
   font-family: var(--poppins-font);
   margin-top: 10px;
 }
+
+/* ! review */
+.reviews {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 16px;
+}
+.review-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  background-color: var(--container-color);
+  padding: 10px;
+  border-radius: 6px;
+}
+
+.review-box img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  object-fit: cover;
+  object-position: center;
+  box-shadow: 0 4px 16px rgb(68, 68, 68);
+  border: 7px solid #fff;
+}
+.review-box h2 {
+  font-size: 16px;
+  color: var(--main-color);
+  font-family: var(--poppins-font);
+  font-weight: 500;
+  margin: 16px 0;
+}
+.review-box span {
+  font-size: 23px;
+  font-weight: 700;
+  color: var(--main-color);
+}
+.review-box p {
+  font-family: var(--poppins-font);
+  font-size: 12px;
+  margin-top: 16px;
+  letter-spacing: 1.5px;
+  max-width: 500px;
+}
+
+/* ! Book */
+.book {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px 20px;
+  position: relative;
+}
+.book-img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 16px;
+  z-index: -1;
+  object-fit: cover;
+}
+.book-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  border-radius: 16px;
+  z-index: -1;
+}
+.book-data {
+  margin-top: 64px;
+}
+.book-data h2 {
+  color: var(--bg-color);
+  font-size: 32px;
+  text-align: center;
+  font-weight: 700;
+}
+.book-data form {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  background: var(--bg-color);
+  padding: 2px 10px;
+  margin: 16px 0;
+  border-radius: 32px;
+}
+.input-box {
+  display: flex;
+  align-items: center;
+  column-gap: 5px;
+}
+.input-box .bx {
+  color: var(--text-color);
+}
+.input-box input {
+  width: 100%;
+  border: none;
+  outline: none;
+  padding: 15px 0;
+  background: var(--bg-color);
+}
+.book-btn {
+  white-space: nowrap; /* yazının taşan kısmının alt satırdan devam etmesi yerine yanından devam etmesini sağlat */
+  padding: 10px 14px;
+  background: var(--main-color);
+  color: var(--bg-color);
+  border: none;
+  border-radius: 40px;
+  font-size: 13px;
+  transition: all 0.4s;
+}
+.book-btn:hover {
+  background-color: var(--second-color);
+  cursor: pointer;
+}
+.book-data p {
+  font-size: 13px;
+  color: var(--bg-color);
+  text-align: center;
+  font-weight: 500;
+}
+
+/* ! Footer */
+footer {
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  margin-top: 48px !important;
+  padding: 48px 0 32px;
+}
+footer .logo {
+  color: var(--main-color);
+}
+.social {
+  display: flex;
+  margin-top: 16px;
+  gap: 16px;
+  align-items: center;
+}
+.social a {
+  color: var(--main-color);
+  font-size: 24px;
+}
+.social a:hover {
+  color: var(--second-color);
+}
+.footer-box {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.footer-box h3 {
+  font-size: 18px;
+  font-weight: 400;
+  color: var(--main-color);
+  margin-top: 16px;
+}
+
+.footer-box a {
+  color: var(--main-color);
+}
+.copyright {
+  padding: 30px;
+  text-align: center;
+  color: var(--main-color);
+}
+
 /* ! Responsive */
 @media (max-width: 1080px) {
   .container {
@@ -285,6 +464,9 @@ header {
   }
 }
 @media (max-width: 875px) {
+  .reviews {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 @media (max-width: 770px) {
   .home {
@@ -300,6 +482,25 @@ header {
   }
   .product-content {
     grid-template-columns: repeat(2, 1fr);
+  }
+  .reviews {
+    grid-template-columns: 1fr;
+  }
+  .book {
+    padding: 20px;
+  }
+  .book-data {
+    margin-top: 48px;
+    max-width: 350px;
+    width: 100%;
+  }
+  .book-data form {
+    display: grid;
+    padding: 15px;
+    border-radius: 15px;
+  }
+  footer {
+    grid-template-columns: repeat(3, auto);
   }
 }
 @media (max-width: 700px) {
@@ -326,6 +527,9 @@ header {
   .product-content {
     grid-template-columns: 1fr;
     padding: 20px;
+  }
+  footer {
+    grid-template-columns: 1fr;
   }
 }
 @media (max-width: 380px) {
